# codelabs

./: .bazelignore  .bazelrc  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  BUILD.bazel  MODULE.bazel  Package.swift  README.md  WORKSPACE  WORKSPACE.bazel  deps.bzl  go.mod  go.sum  maven_install.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  requirements_lock.txt  swift_deps_index.json
.aspect/cli/: config.yaml
.github/workflows/: ci.yaml
backend/: BUILD.bazel
backend/cmd/server/: BUILD.bazel  server.go
cli/: BUILD.bazel  __main__.py
client/: BUILD.bazel
client/src/bazel/bootcamp/: BUILD.bazel  JavaLoggingClientTest.java  LoggerGrpc.java  defs.bzl
frontend/: BUILD.bazel  index.html  index.ts  package.json  tsconfig.json
go/cmd/server/: BUILD.bazel
ios/: README.md
ios/LoggingClient/: BUILD.bazel
ios/LoggingClient/App/: BUILD.bazel  LoggingClientApp.swift
ios/LoggingClient/App/Models/: DefaultHelpers.swift  ModelData.swift  SentMessage.swift
ios/LoggingClient/App/Preview Content/: PreviewData.swift
ios/LoggingClient/App/Views/: ContentView.swift  EditConnection.swift  SendMessage.swift  SentMessageRow.swift
ios/LoggingClient/UITests/: BUILD.bazel  LoggingClientUITests.swift  LoggingClientUITestsLaunchTests.swift  XCUIElement+Extensions.swift
ios/Sources/GRPCLogger/: BUILD.bazel  GRPCLogHandler.swift  GRPCLogger.swift  Level.swift  Logger.swift  LoggerProtocol.swift  MostRecentLogger.swift
ios/Sources/MyLogging/: BUILD.bazel  LogHandler.swift  Logger.swift
ios/Sources/MyLoggingTestHelpers/: BUILD.bazel  TestLoggerProvider.swift
ios/Tests/GRPCLoggerTests/: BUILD.bazel  GRPCLogHandlerTests.swift  GRPCLoggerTests.swift  LevelTests.swift  LoggerTests.swift  MostRecentLoggerTests.swift
ios/Tests/MyLoggingTestHelpersTests/: BUILD.bazel  TestLoggerProviderTest.swift  main.swift
ios/Tests/MyLoggingTests/: BUILD.bazel  GRPCLogHandlerTests.swift  LevelTests.swift  LoggerTests.swift  main.swift
proto/: ts_proto_library.bzl
proto/logger/: BUILD  BUILD.bazel  ts_proto_library.bzl
python/: __main__.py
schema/: package.json
schema/logger/: BUILD.bazel  logger_connect.d.ts  logger_pb.d.ts  ts_proto_library.bzl
typescript/: BUILD  BUILD.bazel  package.json  tsconfig.json  webpack.config.js
