# Marker file that makes this the root of a Bazel workspace
# See https://bazel.build/concepts/build-ref#workspace

# load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# # grpc dependencies
# http_archive(
#     name = "io_grpc_grpc_java",
#     urls = [
#         "https://github.com/grpc/grpc-java/archive/v1.50.2.tar.gz",
#     ],
#     sha256 = "992f757b022bb40d2db07a4924f169c0abacbbddcae8f32edb99921683fdffe9",
#     strip_prefix = "grpc-java-1.50.2",
# )

# load("@io_grpc_grpc_java//:repositories.bzl", "grpc_java_repositories")

# grpc_java_repositories()