load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@aspect_rules_js//js:defs.bzl", "js_run_devserver")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//frontend:http-server/package_json.bzl", "bin")

npm_link_all_packages(name = "node_modules")

ts_project(
    name = "compile",
    srcs = ["index.ts"],
    deps = [
        "//schema/logger:logger_ts_proto",
    ],
)

bin.http_server_binary(
    name = "http_server",
)

js_run_devserver(
    name = "serve",
    args = ["."],
    data = ["index.html"],
    tool = ":http_server",
)
