load(
    "@rules_xcodeproj//xcodeproj:defs.bzl",
    "top_level_target",
    "xcodeproj",
)

xcodeproj(
    name = "xcodeproj",
    project_name = "LoggingClient",
    tags = ["manual"],
    top_level_targets = [
        top_level_target(
            "//ios/LoggingClient/App",
            target_environments = [
                "device",
                "simulator",
            ],
        ),
        "//ios/LoggingClient/UITests",
    ],
)
