load(
    "@rules_xcodeproj//xcodeproj:defs.bzl",
    "top_level_target",
    "xcodeproj",
)

xcodeproj(
    name = "xcodeproj",
    project_name = "LoggingClient",
    tags = ["manual"],
    target_compatible_with = select({
        "@platforms//os:macos": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    top_level_targets = [
        top_level_target(
            "//ios/LoggingClient/App",
            target_environments = [
                "simulator",
            ],
        ),
        "//ios/LoggingClient/UITests",
    ],
)
