load("@rules_apple//apple:ios.bzl", "ios_application")
load("@rules_swift//swift:swift.bzl", "swift_library")

# gazelle:swift_default_module_name LoggingClientApp

swift_library(
    name = "AppLib",
    srcs = [
        "LoggingClientApp.swift",
        "Views/ContentView.swift",
    ],
    module_name = "LoggingClientApp",
    tags = ["manual"],
    visibility = ["//visibility:public"],
)

ios_application(
    name = "App",
    app_icons = glob(["Assets.xcassets/AppIcon.appiconset/**"]),
    bundle_id = "build.aspect.LoggingClient",
    families = [
        "iphone",
    ],
    infoplists = [":Info.plist"],
    minimum_os_version = "16.0",
    resources = glob(
        ["Assets.xcassets/**"],
        exclude = ["Assets.xcassets/AppIcon.appiconset/**"],
    ),
    # So that rules_xcodeproj can see this
    visibility = ["//visibility:public"],
    deps = [":AppLib"],
)
