load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@rules_apple//apple:ios.bzl", "ios_application")
load("@rules_swift//swift:swift.bzl", "swift_library")

# gazelle:swift_default_module_name LoggingClientApp

swift_library(
    name = "AppLib",
    srcs = [
        "LoggingClientApp.swift",
        "Models/DefaultHelpers.swift",
        "Models/ModelData.swift",
        "Models/SentMessage.swift",
        "Preview Content/PreviewData.swift",
        "Views/ContentView.swift",
        "Views/EditConnection.swift",
        "Views/SendMessage.swift",
        "Views/SentMessageRow.swift",
    ],
    module_name = "LoggingClientApp",
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = [
        "//ios/Sources/MyLogging",
        "//schema/logger:logger_client_swift_grpc",
        "@swiftpkg_swifterswift//:Sources_SwifterSwift",
    ],
)

ios_application(
    name = "App",
    app_icons = glob(["Assets.xcassets/AppIcon.appiconset/**"]),
    bundle_id = "build.aspect.LoggingClient",
    families = [
        "iphone",
    ],
    infoplists = [":Info.plist"],
    minimum_os_version = "16.0",
    resources = glob(
        ["Assets.xcassets/**"],
        exclude = ["Assets.xcassets/AppIcon.appiconset/**"],
    ),
    # So that rules_xcodeproj can see this
    visibility = ["//visibility:public"],
    deps = [":AppLib"],
)

build_test(
    name = "AppBuildTest",
    targets = [":App"],
)
