load("@rules_apple//apple:ios.bzl", "ios_ui_test")
load("@rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "UITestsLib",
    testonly = True,
    srcs = [
        "LoggingClientUITests.swift",
        "LoggingClientUITestsLaunchTests.swift",
    ],
    module_name = "UITests",
    tags = ["manual"],
)

ios_ui_test(
    name = "UITests",
    size = "enormous",
    minimum_os_version = "16.0",
    runner = "@build_bazel_rules_apple//apple/testing/default_runner:ios_xctestrun_ordered_runner",
    # Mark as manual because they take a long time.
    tags = ["manual"],
    test_host = "//ios/LoggingClient/App",
    # So that rules_xcodeproj can see this
    visibility = ["//visibility:public"],
    deps = [":UITestsLib"],
)
