load("@rules_apple//apple:ios.bzl", "ios_ui_test")
load("@rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "UITestsLib",
    testonly = True,
    srcs = [
        "LoggingClientUITests.swift",
        "LoggingClientUITestsLaunchTests.swift",
        "XCUIElement+Extensions.swift",
    ],
    module_name = "UITests",
    tags = ["manual"],
    target_compatible_with = select({
        "@platforms//os:macos": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    deps = [
        "//ios/Sources/MyLoggingTestHelpers",
        "//schema/logger:logger_server_swift_grpc",
        "//schema/logger:logger_swift_proto",
    ],
)

ios_ui_test(
    name = "UITests",
    size = "enormous",
    minimum_os_version = "16.0",
    runner = "@rules_apple//apple/testing/default_runner:ios_xctestrun_ordered_runner",
    # Mark as manual because they take a long time.
    tags = ["manual"],
    target_compatible_with = select({
        "@platforms//os:macos": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    test_host = "//ios/LoggingClient/App",
    # So that rules_xcodeproj can see this
    visibility = ["//visibility:public"],
    deps = [":UITestsLib"],
)
