load("@rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "MyLoggingTestHelpers",
    srcs = ["TestLoggerProvider.swift"],
    module_name = "MyLoggingTestHelpers",
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = [
        "//schema/logger:logger_server_swift_grpc",
        "//schema/logger:logger_swift_proto",
    ],
)
