load("@rules_swift//swift:swift.bzl", "swift_test")

swift_test(
    name = "GRPCLoggerTests",
    srcs = [
        "GRPCLogHandlerTests.swift",
        "LevelTests.swift",
        "LoggerTests.swift",
    ],
    module_name = "GRPCLoggerTests",
    deps = [
        "//ios/Sources/GRPCLogger",
        "//schema/logger:logger_client_swift_grpc",
        "//schema/logger:logger_server_swift_grpc",
        "//schema/logger:logger_swift_proto",
    ],
)
