load("@rules_swift//swift:swift.bzl", "swift_test")

swift_test(
    name = "MyLoggingTestHelpersTests",
    srcs = [
        "TestLoggerProviderTest.swift",
        "main.swift",
    ],
    module_name = "MyLoggingTestHelpersTests",
    deps = [
        "//ios/Sources/MyLoggingTestHelpers",
        "//schema/logger:logger_client_swift_grpc",
        "//schema/logger:logger_swift_proto",
    ],
)
