load("@rules_swift//swift:swift.bzl", "swift_test")

swift_test(
    name = "MyLoggingTests",
    srcs = [
        "GRPCLogHandlerTests.swift",
        "LevelTests.swift",
        "LoggerTests.swift",
        "main.swift",
    ],
    module_name = "MyLoggingTests",
    deps = [
        "//ios/Sources/MyLogging",
        "//ios/Sources/MyLoggingTestHelpers",
        "//schema/logger:logger_client_swift_grpc",
        "//schema/logger:logger_server_swift_grpc",
        "//schema/logger:logger_swift_proto",
    ],
)
